option('use_external_libs',
  type : 'boolean',
  value : false,
  yield : true,
  description : 'true to compile and link the libraries in the externals folder, false to use the libraries installed on the system or from a package manager in linux')

option('libs_shared_build',
  type : 'boolean',
  value : true,
  yield : true,
  description : 'true or false to compile and link the libraries in the externals folder as shared or static')

option('xorg_support',
  type : 'boolean',
  value : false,
  yield : true,
  description : 'Disable or enable Xorg suport | Xorg is almost obsolete')
